Bug 399951 - Upload Schemes does noting.
Summary: Upload Schemes does noting.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.14.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Woehlke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-17 22:44 UTC by Andy Great
Modified: 2019-04-11 07:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Great 2018-10-17 22:44:02 UTC
SUMMARY
When edit an existing color scheme and then press " * Upload Scheme"
 noting happen.

I tried start systemsettings5 from terminal this is what I get

checking permissions of  "/usr/share/color-schemes/KritaDarker.colors"
path for color scheme  "Krita darker"  couldn't be found

The second line immediately appear when I press upload scheme


SOFTWARE VERSIONS
(available in About System)
openSUSE Tumbleweed
KDE Plasma Version: 5.14.0
KDE Frameworks Version:  5.50.0
Qt Version: 5.11.2
Kernel Version: 4.18.12-1-default
OS Type: 64 bit
Comment 1 Kai Uwe Broulik 2019-04-11 07:00:58 UTC
Git commit c0b1a7e16e69faf74a03156e404a40e1de8feaee by Kai Uwe Broulik.
Committed on 11/04/2019 at 07:00.
Pushed by broulik into branch 'Plasma/5.15'.

[kcolorschemeeditor] Use config path instead of searching again

m_schemeName is the translated scheme name which may not match the file name.
Since the config is always opened with an absolute path, we can just use the config's name.
FIXED-IN: 5.15.5

Differential Revision: https://phabricator.kde.org/D20213

M  +1    -10   kcms/colors/scmeditordialog.cpp

https://commits.kde.org/plasma-desktop/c0b1a7e16e69faf74a03156e404a40e1de8feaee