[kcolorschemeeditor] Use config path instead of searching again

m_schemeName is the translated scheme name which may not match the file name.
Since the config is always opened with an absolute path, we can just use the config's name.

BUG: 399951
FIXED-IN: 5.15.5

Differential Revision: https://phabricator.kde.org/D20213